--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     ]
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.1.4",
+    "@chakra-ui/react": "^2.7.1",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@types/node": "20.3.3",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -24,6 +28,7 @@
     "cheerio": "^1.0.0-rc.12",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.8",
+    "framer-motion": "^10.12.18",
     "next": "13.4.8",
     "postcss": "8.4.24",
     "react": "18.2.0",
